PossDBCore/src/org/parser/CreateTableParser.java
// $ANTLR 3.4 G:\\workspace\\PossDB\\Grammers\\CreateTable.g 2013-03-24 17:28:14

package org.parser;

import java.util.List;
import org.parser.QueryList;
import org.parser.ColumnList;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class CreateTableParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "A", "AND", "AS", "ASTERIK", "B", "C", "CERTAIN", "COMMA", "CONDITION", "CREATE", "D", "DIGIT", "DOT", "E", "EQUAL", "EXCLAMATION", "F", "FALSE", "FROM", "G", "H", "I", "ID", "IN", "INNER", "INSERT", "INTO", "IS", "J", "JOIN", "K", "L", "LEFT_PAREN", "LEFT_TRIANGLE", "M", "N", "NEWLINE", "NOT", "NOT_EQUAL", "NUMBER", "O", "ON", "OR", "P", "POSSIBLE", "Q", "QUOTE", "R", "RIGHT_PAREN", "RIGHT_TRIANGLE", "S", "SELECT", "SEMICOLON", "T", "TABLE", "TRUE", "U", "UNKNOWN", "V", "VALUES", "VARIABLE", "W", "WHERE", "WS", "X", "Y", "Z", "'-'", "'\\'\\''"
    };

    public static final int EOF=-1;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int A=4;
    public static final int AND=5;
    public static final int AS=6;
    public static final int ASTERIK=7;
    public static final int B=8;
    public static final int C=9;
    public static final int CERTAIN=10;
    public static final int COMMA=11;
    public static final int CONDITION=12;
    public static final int CREATE=13;
    public static final int D=14;
    public static final int DIGIT=15;
    public static final int DOT=16;
    public static final int E=17;
    public static final int EQUAL=18;
    public static final int EXCLAMATION=19;
    public static final int F=20;
    public static final int FALSE=21;
    public static final int FROM=22;
    public static final int G=23;
    public static final int H=24;
    public static final int I=25;
    public static final int ID=26;
    public static final int IN=27;
    public static final int INNER=28;
    public static final int INSERT=29;
    public static final int INTO=30;
    public static final int IS=31;
    public static final int J=32;
    public static final int JOIN=33;
    public static final int K=34;
    public static final int L=35;
    public static final int LEFT_PAREN=36;
    public static final int LEFT_TRIANGLE=37;
    public static final int M=38;
    public static final int N=39;
    public static final int NEWLINE=40;
    public static final int NOT=41;
    public static final int NOT_EQUAL=42;
    public static final int NUMBER=43;
    public static final int O=44;
    public static final int ON=45;
    public static final int OR=46;
    public static final int P=47;
    public static final int POSSIBLE=48;
    public static final int Q=49;
    public static final int QUOTE=50;
    public static final int R=51;
    public static final int RIGHT_PAREN=52;
    public static final int RIGHT_TRIANGLE=53;
    public static final int S=54;
    public static final int SELECT=55;
    public static final int SEMICOLON=56;
    public static final int T=57;
    public static final int TABLE=58;
    public static final int TRUE=59;
    public static final int U=60;
    public static final int UNKNOWN=61;
    public static final int V=62;
    public static final int VALUES=63;
    public static final int VARIABLE=64;
    public static final int W=65;
    public static final int WHERE=66;
    public static final int WS=67;
    public static final int X=68;
    public static final int Y=69;
    public static final int Z=70;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public CreateTableParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public CreateTableParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return CreateTableParser.tokenNames; }
    public String getGrammarFileName() { return "G:\\workspace\\PossDB\\Grammers\\CreateTable.g"; }



    // $ANTLR start "parse"
    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:15:1: parse : ( create_table | insert_tuple | select | is_functions );
    public final void parse() throws RecognitionException {
        try {
            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:15:8: ( create_table | insert_tuple | select | is_functions )
            int alt1=4;
            switch ( input.LA(1) ) {
            case CREATE:
                {
                alt1=1;
                }
                break;
            case INSERT:
                {
                alt1=2;
                }
                break;
            case SELECT:
                {
                alt1=3;
                }
                break;
            case IS:
                {
                alt1=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }

            switch (alt1) {
                case 1 :
                    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:16:4: create_table
                    {
                    pushFollow(FOLLOW_create_table_in_parse29);
                    create_table();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:16:19: insert_tuple
                    {
                    pushFollow(FOLLOW_insert_tuple_in_parse33);
                    insert_tuple();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:16:34: select
                    {
                    pushFollow(FOLLOW_select_in_parse37);
                    select();

                    state._fsp--;


                    }
                    break;
                case 4 :
                    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:16:43: is_functions
                    {
                    pushFollow(FOLLOW_is_functions_in_parse41);
                    is_functions();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "parse"



    // $ANTLR start "create_table"
    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:18:1: create_table : CREATE TABLE table_name table_element_list SEMICOLON ;
    public final void create_table() throws RecognitionException {
        CreateTableParser.table_name_return table_name1 =null;

        List table_element_list2 =null;


        try {
            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:19:2: ( CREATE TABLE table_name table_element_list SEMICOLON )
            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:19:4: CREATE TABLE table_name table_element_list SEMICOLON
            {
            match(input,CREATE,FOLLOW_CREATE_in_create_table50); 

            match(input,TABLE,FOLLOW_TABLE_in_create_table52); 

            pushFollow(FOLLOW_table_name_in_create_table54);
            table_name1=table_name();

            state._fsp--;


            pushFollow(FOLLOW_table_element_list_in_create_table59);
            table_element_list2=table_element_list();

            state._fsp--;



            		        Query.q = new CreateTable();
            		        Column c = new Column();
            		        c.name = (table_name1!=null?input.toString(table_name1.start,table_name1.stop):null).toUpperCase();
            			Query.q.setTableName(c); 
            			Query.q.columns   = (ColumnList) table_element_list2;
            		

            match(input,SEMICOLON,FOLLOW_SEMICOLON_in_create_table66); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "create_table"



    // $ANTLR start "insert_tuple"
    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:29:1: insert_tuple : INSERT INTO table_name VALUES integer_list ( CONDITION LEFT_PAREN boolean_value_expression RIGHT_PAREN )? SEMICOLON ;
    public final void insert_tuple() throws RecognitionException {
        CreateTableParser.table_name_return table_name3 =null;

        List integer_list4 =null;

        CreateTableParser.boolean_value_expression_return boolean_value_expression5 =null;


        try {
            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:30:9: ( INSERT INTO table_name VALUES integer_list ( CONDITION LEFT_PAREN boolean_value_expression RIGHT_PAREN )? SEMICOLON )
            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:30:11: INSERT INTO table_name VALUES integer_list ( CONDITION LEFT_PAREN boolean_value_expression RIGHT_PAREN )? SEMICOLON
            {
            match(input,INSERT,FOLLOW_INSERT_in_insert_tuple83); 

            match(input,INTO,FOLLOW_INTO_in_insert_tuple85); 

            pushFollow(FOLLOW_table_name_in_insert_tuple87);
            table_name3=table_name();

            state._fsp--;


            match(input,VALUES,FOLLOW_VALUES_in_insert_tuple89); 

            pushFollow(FOLLOW_integer_list_in_insert_tuple108);
            integer_list4=integer_list();

            state._fsp--;



            		        Query.q = new InsertIntoTable();
            			Column c = new Column();
            		        c.name = (table_name3!=null?input.toString(table_name3.start,table_name3.stop):null).toUpperCase();
            			Query.q.setTableName(c); 
            			Query.q.intList   = (QueryList) integer_list4;
            		

            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:37:5: ( CONDITION LEFT_PAREN boolean_value_expression RIGHT_PAREN )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==CONDITION) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:38:8: CONDITION LEFT_PAREN boolean_value_expression RIGHT_PAREN
                    {
                    match(input,CONDITION,FOLLOW_CONDITION_in_insert_tuple121); 

                    match(input,LEFT_PAREN,FOLLOW_LEFT_PAREN_in_insert_tuple123); 

                    pushFollow(FOLLOW_boolean_value_expression_in_insert_tuple125);
                    boolean_value_expression5=boolean_value_expression();

                    state._fsp--;



                    		        ((InsertIntoTable)Query.q).condition = (boolean_value_expression5!=null?input.toString(boolean_value_expression5.start,boolean_value_expression5.stop):null).toUpperCase();
                    		     

                    match(input,RIGHT_PAREN,FOLLOW_RIGHT_PAREN_in_insert_tuple129); 

                    }
                    break;

            }


            match(input,SEMICOLON,FOLLOW_SEMICOLON_in_insert_tuple140); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "insert_tuple"



    // $ANTLR start "condition"
    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:44:1: condition returns [String cond] : LEFT_PAREN onlysinglequotes RIGHT_PAREN ;
    public final String condition() throws RecognitionException {
        String cond = null;


        CreateTableParser.onlysinglequotes_return onlysinglequotes6 =null;


        try {
            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:45:2: ( LEFT_PAREN onlysinglequotes RIGHT_PAREN )
            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:45:4: LEFT_PAREN onlysinglequotes RIGHT_PAREN
            {
            match(input,LEFT_PAREN,FOLLOW_LEFT_PAREN_in_condition154); 

            pushFollow(FOLLOW_onlysinglequotes_in_condition157);
            onlysinglequotes6=onlysinglequotes();

            state._fsp--;


            match(input,RIGHT_PAREN,FOLLOW_RIGHT_PAREN_in_condition160); 

            cond = (onlysinglequotes6!=null?input.toString(onlysinglequotes6.start,onlysinglequotes6.stop):null); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return cond;
    }
    // $ANTLR end "condition"


    public static class table_name_return extends ParserRuleReturnScope {
    };


    // $ANTLR start "table_name"
    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:47:1: table_name : ( schema DOT )? table ;
    public final CreateTableParser.table_name_return table_name() throws RecognitionException {
        CreateTableParser.table_name_return retval = new CreateTableParser.table_name_return();
        retval.start = input.LT(1);


        try {
            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:48:2: ( ( schema DOT )? table )
            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:48:4: ( schema DOT )? table
            {
            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:48:4: ( schema DOT )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==ID) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==DOT) ) {
                    alt3=1;
                }
            }
            switch (alt3) {
                case 1 :
                    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:48:5: schema DOT
                    {
                    pushFollow(FOLLOW_schema_in_table_name174);
                    schema();

                    state._fsp--;


                    match(input,DOT,FOLLOW_DOT_in_table_name176); 

                    }
                    break;

            }


            pushFollow(FOLLOW_table_in_table_name180);
            table();

            state._fsp--;


            }

            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "table_name"



    // $ANTLR start "table_element_list"
    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:50:1: table_element_list returns [List cols] : LEFT_PAREN column= column_name ( COMMA column= column_name )* RIGHT_PAREN ;
    public final List table_element_list() throws RecognitionException {
        List cols = null;


        Column column =null;


        try {
            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:51:2: ( LEFT_PAREN column= column_name ( COMMA column= column_name )* RIGHT_PAREN )
            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:51:4: LEFT_PAREN column= column_name ( COMMA column= column_name )* RIGHT_PAREN
            {
            cols = new ColumnList();

            match(input,LEFT_PAREN,FOLLOW_LEFT_PAREN_in_table_element_list196); 

            pushFollow(FOLLOW_column_name_in_table_element_list200);
            column=column_name();

            state._fsp--;


            cols.add(column);

            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:51:89: ( COMMA column= column_name )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==COMMA) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:51:90: COMMA column= column_name
            	    {
            	    match(input,COMMA,FOLLOW_COMMA_in_table_element_list205); 

            	    pushFollow(FOLLOW_column_name_in_table_element_list209);
            	    column=column_name();

            	    state._fsp--;


            	    cols.add(column);

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            match(input,RIGHT_PAREN,FOLLOW_RIGHT_PAREN_in_table_element_list217); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return cols;
    }
    // $ANTLR end "table_element_list"



    // $ANTLR start "select_element_list"
    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:53:1: select_element_list returns [List cols] :column= column_name ( COMMA column= column_name )* ;
    public final List select_element_list() throws RecognitionException {
        List cols = null;


        Column column =null;


        try {
            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:54:2: (column= column_name ( COMMA column= column_name )* )
            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:54:4: column= column_name ( COMMA column= column_name )*
            {
            cols = new ColumnList();

            pushFollow(FOLLOW_column_name_in_select_element_list235);
            column=column_name();

            state._fsp--;


            cols.add(column);

            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:54:79: ( COMMA column= column_name )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==COMMA) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:54:80: COMMA column= column_name
            	    {
            	    match(input,COMMA,FOLLOW_COMMA_in_select_element_list241); 

            	    pushFollow(FOLLOW_column_name_in_select_element_list245);
            	    column=column_name();

            	    state._fsp--;


            	    cols.add(column);

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return cols;
    }
    // $ANTLR end "select_element_list"



    // $ANTLR start "table_element_list_with_quote"
    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:56:1: table_element_list_with_quote returns [List cols] : LEFT_PAREN column= quoted_item ( COMMA column= quoted_item )* RIGHT_PAREN ;
    public final List table_element_list_with_quote() throws RecognitionException {
        List cols = null;


        String column =null;


        try {
            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:57:9: ( LEFT_PAREN column= quoted_item ( COMMA column= quoted_item )* RIGHT_PAREN )
            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:57:11: LEFT_PAREN column= quoted_item ( COMMA column= quoted_item )* RIGHT_PAREN
            {
            cols = new QueryList();

            match(input,LEFT_PAREN,FOLLOW_LEFT_PAREN_in_table_element_list_with_quote273); 

            pushFollow(FOLLOW_quoted_item_in_table_element_list_with_quote278);
            column=quoted_item();

            state._fsp--;


            cols.add(column);

            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:57:97: ( COMMA column= quoted_item )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==COMMA) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:57:98: COMMA column= quoted_item
            	    {
            	    match(input,COMMA,FOLLOW_COMMA_in_table_element_list_with_quote284); 

            	    pushFollow(FOLLOW_quoted_item_in_table_element_list_with_quote289);
            	    column=quoted_item();

            	    state._fsp--;


            	    cols.add(column);

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            match(input,RIGHT_PAREN,FOLLOW_RIGHT_PAREN_in_table_element_list_with_quote297); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return cols;
    }
    // $ANTLR end "table_element_list_with_quote"



    // $ANTLR start "integer_list"
    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:59:1: integer_list returns [List cols] : LEFT_PAREN column= NUMBER ( COMMA column= NUMBER )* RIGHT_PAREN ;
    public final List integer_list() throws RecognitionException {
        List cols = null;


        Token column=null;

        try {
            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:60:9: ( LEFT_PAREN column= NUMBER ( COMMA column= NUMBER )* RIGHT_PAREN )
            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:60:11: LEFT_PAREN column= NUMBER ( COMMA column= NUMBER )* RIGHT_PAREN
            {
            cols = new QueryList();

            match(input,LEFT_PAREN,FOLLOW_LEFT_PAREN_in_integer_list328); 

            column=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_integer_list333); 

            cols.add(column.getText());

            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:60:97: ( COMMA column= NUMBER )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==COMMA) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:60:98: COMMA column= NUMBER
            	    {
            	    match(input,COMMA,FOLLOW_COMMA_in_integer_list339); 

            	    column=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_integer_list344); 

            	    cols.add(column.getText());

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            match(input,RIGHT_PAREN,FOLLOW_RIGHT_PAREN_in_integer_list352); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return cols;
    }
    // $ANTLR end "integer_list"



    // $ANTLR start "column_name"
    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:62:1: column_name returns [Column name] : column_definition ;
    public final Column column_name() throws RecognitionException {
        Column name = null;


        Column column_definition7 =null;


        try {
            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:63:2: ( column_definition )
            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:63:4: column_definition
            {
            pushFollow(FOLLOW_column_definition_in_column_name374);
            column_definition7=column_definition();

            state._fsp--;


            name = column_definition7; 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return name;
    }
    // $ANTLR end "column_name"



    // $ANTLR start "column_definition"
    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:65:1: column_definition returns [Column col] : ( schema DOT )? sel= ( ID | ASTERIK ) ( ( AS )? columnalias )? ;
    public final Column column_definition() throws RecognitionException {
        Column col = null;


        Token sel=null;
        CreateTableParser.schema_return schema8 =null;

        CreateTableParser.columnalias_return columnalias9 =null;


        try {
            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:66:2: ( ( schema DOT )? sel= ( ID | ASTERIK ) ( ( AS )? columnalias )? )
            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:66:4: ( schema DOT )? sel= ( ID | ASTERIK ) ( ( AS )? columnalias )?
            {
            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:66:4: ( schema DOT )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==ID) ) {
                int LA8_1 = input.LA(2);

                if ( (LA8_1==DOT) ) {
                    alt8=1;
                }
            }
            switch (alt8) {
                case 1 :
                    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:66:5: schema DOT
                    {
                    pushFollow(FOLLOW_schema_in_column_definition390);
                    schema8=schema();

                    state._fsp--;


                    match(input,DOT,FOLLOW_DOT_in_column_definition392); 

                    }
                    break;

            }


            sel=(Token)input.LT(1);

            if ( input.LA(1)==ASTERIK||input.LA(1)==ID ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:66:35: ( ( AS )? columnalias )?
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( (LA10_0==AS||LA10_0==ID) ) {
                alt10=1;
            }
            switch (alt10) {
                case 1 :
                    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:66:36: ( AS )? columnalias
                    {
                    // G:\\workspace\\PossDB\\Grammers\\CreateTable.g:66:36: ( AS )?
